including internet passwords

--- a/ATKeychainPlugin/trunk/Info.plist
+++ b/ATKeychainPlugin/trunk/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>2.1</string>
 	<key>CFBundleVersion</key>
-	<string>F1A</string>
+	<string>F21</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2005. Alastair Tse &lt;alastair@liquidx.net&gt;.</string>
 	<key>QSActions</key>
