--- a/ATKeychainPlugin/trunk/Info.plist
+++ b/ATKeychainPlugin/trunk/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleVersion</key>
-	<string>81</string>
+	<string>8B</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright 2006, Alastair Tse.</string>
 	<key>NSPrincipalClass</key>
@@ -177,23 +177,6 @@
 		<dict>
 			<key>com.apple.keychainaccess</key>
 			<string>ATKeychainPluginSource</string>
-		</dict>
-		<key>QSCommands</key>
-		<dict>
-			<key>ATKeychainLockCommand</key>
-			<dict>
-				<key>actionID</key>
-				<string>AppleScriptRunAction</string>
-				<key>directResource</key>
-				<dict>
-					<key>bundle</key>
-					<string>net.liquidx.ATKeychainCatalogPlugin</string>
-					<key>path</key>
-					<string>Contents/Resources/LockKeychains.scpt</string>
-				</dict>
-				<key>name</key>
-				<string>Lock Keychains</string>
-			</dict>
 		</dict>
 		<key>QSObjectHandlers</key>
 		<dict>
